<resources>
    <string name="app_name">MOVE</string>
    <string name="button">Button</string>
    <string name="lewati_perkenalan">LEWATI PERKENALAN</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="now_playing1">Now Playing</string>
    <string name="onboard1">Lebih mudah untuk mengetahui\nfilm yang sedang tayang</string>
    <string name="presale">Pre Sale</string>
    <string name="onboarding2">Tidak khawatir ketinggalan\nupdate film terbaru nih</string>
    <string name="cashless">Cashless</string>
    <string name="onboard3">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="mulai">MULAI</string>
    <string name="memulai">MEMULAI</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="username1">Username</string>
    <string name="password">Password</string>
    <string name="signin1">MASUK AKUN</string>
    <string name="signup1">DAFTAR AKUN BARU</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="name_title">Name</string>
    <string name="email_title">Email</string>
    <string name="upload">UPLOAD NANTI</string>
    <string name="photo">Photo</string>
    <string name="simpan">SIMPAN DAN LANJUTKAN</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="bangku">PILIH KURSI</string>
    <string name="tempatduduk">Pilih Kursi</string>
    <string name="bioskop">Nama Bioskop</string>
    <string name="judul_film">Judul Film</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="pembelian">Beli Tiket</string>
    <string name="checkout_title">Checkout</string>
    <string name="when">When</string>
    <string name="date_time_title"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema\n</string>
    <string name="date_time">12 Agustus, 10:25</string>
    <string name="cinema_place">Mall Pondok Indah, Cinema 1</string>
    <string name="items_title">Items</string>
    <string name="seat">Seat Number</string>
    <string name="price">Rp. XX.XXX,00</string>
    <string name="total">Total Harus Dibayar</string>
    <string name="total_price">Rp. XX.XXX,00</string>
    <string name="Ewallet_title">E Wallet</string>
    <string name="total_balance_title">Total Balance</string>
    <string name="balance">Rp. XX.XXX,00</string>
    <string name="bayar">Bayar Sekarang</string>
    <string name="cancel">BATALKAN</string>
    <string name="not_enough_balance_notif">Saldo pada e-wallet kamu tidak mencukupi\nuntuk melakukan transaksi</string>
    <string name="lihat_tiket">LIHAT TIKET</string>
    <string name="home">HOME</string>
    <string name="happy_watching">Happy Watching</string>
    <string name="keterangan_tiket">Tiket telah berhasil dibeli dan\nSelamat menikmati film</string>
    <string name="my_wallet_title">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="history">History</string>
    <string name="total_watch_movie">3,000 Movies</string>
    <string name="lupa_password">Lupa Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>